--- a/views/popular.ejs
+++ b/views/popular.ejs
@@ -11,6 +11,7 @@
                     <div class="star-ratings-sprite">
                         <span style="width:<%=result.vote_average*10%>%" class="star-ratings-sprite-rating"></span>
                     </div>
+                    <span>Score: <%=result.vote_average*10%>%</span>
                     <span class="pull-right">Votes: <b><%=result.vote_count%></b></span>
                     <h1><%=result.title%></h1>
                     <p><%=result.overview.substring(0,100) %>...</p>
