fixed css pathing for landing page

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,7 +3,7 @@
 <head>
     <title>Das Movieeze</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/main.min.css">
 </head>
 <body>
 <div class="landing-container">
